--- a/css/styles.css
+++ b/css/styles.css
@@ -195,17 +195,21 @@ img {
     margin-bottom: 0;
 }
 
-.widget-curso__label{
+.widget-curso__label,
+.curso__label{
     font-family: var(--fuenteHeading);
     font-weight: bold;
 }
 
-.widget-curso__info{
+.widget-curso__info,
+.curso__info{
     font-weight: normal;
 }
 
 .widget-curso__label,
-.widget-curso__info{
+.widget-curso__info,
+.curso__label,
+.curso__info{
     font-size: 2rem;
 }
 
@@ -224,4 +228,26 @@ img {
         column-gap: 2rem;
     }
 }
+
+
+/**  Curso **/
+
+.curso{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px)  {
+    .curso{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+}
+
+.curso:last-of-type{
+    border-bottom: none;
+    margin-bottom: 0;
+}
+
 
